fixed css overflow

--- a/static/style.css
+++ b/static/style.css
@@ -164,6 +164,7 @@ input.key { margin-bottom: 10px; }
 .entry {
 	border-bottom: var(--gainsboro) 1px solid;
 	color: var(--gray);
+	overflow: hidden;
 	padding: 10px var(--percent);
 }
 	.entry:last-child { border-bottom: 0 none; }
